--- a/style.css
+++ b/style.css
@@ -193,4 +193,100 @@ body {
   font-variation-settings: "wdth" 100, "YTLC" 500;
 }
 
-/* photo grid */
+.galeri {
+  width: 80%;
+  margin: 100px auto 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 30px;
+}
+
+.galeri img {
+  height: 280px;
+  object-fit: cover;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 20px;
+  box-shadow: 1px 2px 3px #ddd;
+  transition: transform 0.3s ease;
+}
+
+.galeri img:hover {
+  transform: scale(0.97);
+}
+
+.previewImage {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: 0;
+  left: 0;
+  align-items: center;
+  z-index: 1000;
+  justify-content: center;
+}
+
+.previewImage img {
+  width: 90%;
+  margin-top: 4em;
+  max-width: 300px;
+}
+
+.previewImage span {
+  position: absolute;
+  right: 5%;
+  bottom: 79%;
+  font-size: 40px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.container {
+  padding: 0 15px;
+  box-sizing: border-box;
+}
+
+.comment-box {
+  width: 100%;
+  max-width: 90%;
+  margin: 20px auto;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  overflow: hidden;
+  word-wrap: break-word;
+  box-sizing: border-box;
+}
+
+.comment-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.comment-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.comment-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-time {
+  font-size: 0.9rem;
+  color: #888;
+}
+
+.comment-content {
+  font-size: 1rem;
+  color: #333;
+  overflow-wrap: break-word;
+}
