--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ body {
 .previewImage {
   width: 100%;
   height: 100%;
+  size: 300px;
   background: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
@@ -228,9 +229,9 @@ body {
 }
 
 .previewImage img {
-  width: 90%;
+  width: 100%;
   margin-top: 4em;
-  max-width: 600px;
+  max-width: 300px;
 }
 
 .previewImage span {
