create video feature

--- a/style.css
+++ b/style.css
@@ -10,6 +10,26 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-image: url(./foto/videoBG.jpeg);
+  background-size: cover;
+  background-position: center;
+  filter: blur(5px) brightness(78%);
+  z-index: -1;
+  transform: scale(1.06);
+}
+
+#videoBG {
+  position: relative;
+  overflow: hidden;
+}
+
+#albumBG::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url(./foto/albumbg.jpg);
   background-size: cover;
   background-position: center;
