--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(./foto/videoBG.jpeg);
+  background-image: url(./foto/albumbg.jpg);
   background-size: cover;
   background-position: center;
   filter: blur(5px) brightness(78%);
@@ -23,7 +23,7 @@
   overflow: hidden;
 }
 
-#albumBG::before {
+#videoBG::before {
   content: "";
   position: absolute;
   top: 0;
@@ -238,7 +238,6 @@ body {
 .previewImage {
   width: 100%;
   height: 100%;
-  size: 300px;
   background: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
