change css part 3

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(./foto/albumbg.jpg);
+  background-image: url(./foto/videoBG.jpeg);
   background-size: cover;
   background-position: center;
   filter: blur(5px) brightness(78%);
