--- a/style.css
+++ b/style.css
@@ -33,9 +33,29 @@
   background-image: url(./foto/videoBG.jpeg);
   background-size: cover;
   background-position: center;
-  filter: blur(5px) brightness(78%);
+  filter: blur(5px);
   z-index: -1;
   transform: scale(1.06);
+}
+
+#produktifBG {
+  position: relative;
+  overflow: hidden;
+}
+
+#produktifBG::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./foto/produktifBG.jpg);
+  background-size: cover;
+  background-position: center;
+  filter: blur(1px);
+  z-index: -1;
+  transform: scale(1);
 }
 
 #jumbotron {
@@ -298,15 +318,59 @@ body {
 .comment-info {
   display: flex;
   flex-direction: column;
+  bottom: 5px;
+}
+
+.comment-author {
+  font-weight: bold;
 }
 
 .comment-time {
   font-size: 0.9rem;
   color: #888;
+  bottom: 5%;
 }
 
 .comment-content {
   font-size: 1rem;
   color: #333;
   overflow-wrap: break-word;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.video-container {
+  flex: 1;
+  max-width: 280px;
+  margin-right: 20px;
+}
+
+.text-content {
+  flex: 2;
+}
+
+.video-container iframe {
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .content-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .video-container {
+    margin-right: 0;
+    margin-bottom: 20px;
+    max-width: 100%;
+  }
+
+  .text-content {
+    width: 100%;
+  }
 }
