--- a/style.css
+++ b/style.css
@@ -106,65 +106,6 @@
   color: white;
 }
 
-.geserwoy {
-  margin-top: 2em;
-}
-
-.geserwoy h1 {
-  font-size: 2em;
-}
-
-.slideshow-container {
-  margin: auto;
-  position: relative;
-  margin-bottom: 100px;
-  margin-top: 70px;
-  width: 95%;
-}
-
-.slides {
-  margin-bottom: 15px;
-  overflow: hidden;
-  border-radius: 20px;
-  width: 100%;
-  display: none;
-  object-position: center;
-}
-
-.progress-bar {
-  height: 100%;
-  background-color: #ffae44;
-  position: absolute;
-  height: 8px;
-  top: 10;
-  border-radius: 20px;
-}
-
-#hilang {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes float {
-  0% {
-    transform: translatey(0px);
-  }
-  50% {
-    transform: translatey(-40px);
-  }
-  100% {
-    transform: translatey(0px);
-  }
-}
-
 .rounded {
   box-shadow: 3px 3px 3px #44423d6c;
   margin-bottom: 1rem;
@@ -373,4 +314,12 @@ body {
   .text-content {
     width: 100%;
   }
+}
+
+#materiIcon{
+  width: 80%;
+  margin: 100px auto 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 30px;
 }
