--- a/style.css
+++ b/style.css
@@ -38,24 +38,24 @@
   transform: scale(1.06);
 }
 
-#produktifBG {
+#materiBG {
   position: relative;
   overflow: hidden;
 }
 
-#produktifBG::before {
+#materiBG::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(./foto/produktifBG.jpg);
+  background-image: url(./foto/materibg.jpg);
   background-size: cover;
   background-position: center;
-  filter: blur(1px);
+  filter: blur(4px) brightness(70%);
   z-index: -1;
-  transform: scale(1);
+  transform: scale(1.25);
 }
 
 #jumbotron {
@@ -142,11 +142,6 @@ body {
 .aos-animate {
   opacity: 1;
   transform: translateY(0);
-}
-
-#textS {
-  text-shadow: 2px 2px 4px #44423d6c;
-  font-weight: 800;
 }
 
 .about-section {
@@ -299,27 +294,50 @@ body {
   height: auto;
 }
 
-@media (max-width: 768px) {
-  .content-wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .video-container {
-    margin-right: 0;
-    margin-bottom: 20px;
-    max-width: 100%;
-  }
-
-  .text-content {
-    width: 100%;
-  }
+.comment-box {
+  padding: 20px;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+  text-align: center;
 }
 
-#materiIcon{
-  width: 80%;
-  margin: 100px auto 50px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 30px;
+.comment-header {
+  margin-bottom: 10px;
+}
+
+.materi-content {
+  margin-bottom: 20px;
+}
+
+.materi-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.materi-btn {
+  display: flex;
+  align-items: center;
+  margin: 5px;
+  margin-top: 10px;
+}
+
+.materi-btn img {
+  margin-right: 3px;
+  width: 24px;
+  height: 24px;
+}
+
+@media (max-width: 768px) {
+  .materi-btn {
+    font-size: 14px;
+    padding: 10px 15px;
+    margin-top: 1px;
+  }
+
+  .materi-btn img {
+    width: 25px;
+    height: 25px;
+  }
 }
