--- a/anotherImprove.css
+++ b/anotherImprove.css
@@ -4,7 +4,28 @@
     flex-direction: column;
     align-items: center;
   }
-
+  .previewImage {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column; /* Susun elemen secara vertikal */
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    overflow: hidden; /* Menyembunyikan bagian gambar yang melebihi batas */
+  }
+  
+  .previewImage img {
+    max-width: 50%; /* Menyesuaikan lebar gambar */
+    max-height: 50vh; /* Menyesuaikan tinggi gambar */
+    object-fit: contain;
+    border-radius: 10px;
+    display: block;
+  }
   .video-container {
     margin-right: 0;
     margin-bottom: 20px;
@@ -69,6 +90,17 @@
   #materiJudul{
     margin-top: 3em;
   }
+  #previewDescription {
+    padding: 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 130px; /* Jarak dari bagian bawah */
+    background: rgba(0, 0, 0, 0.7); /* Background hitam transparan */
+    border-radius: 5px;
+    text-align: center;
+    z-index: 1001;
+    font-size: 13px; /* Ukuran font deskripsi */
+  }
 }
 
 /* desktop page */
@@ -77,6 +109,26 @@
     font-size: 70px;
     margin-top: 2em;
     font-weight: 600;
+  }
+  .previewImage {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column; /* Susun elemen secara vertikal */
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    overflow: hidden; /* Menyembunyikan bagian gambar yang melebihi batas */
+  }
+  
+  .previewImage img {
+    height: 25vh; /* Menyesuaikan tinggi gambar */
+    object-fit: contain;
+    display: block;
   }
   #deskripsi {
     font-size: 20px;
@@ -113,6 +165,7 @@
     width: 100%;
     margin-top: 4em;
     max-width: 300px;
+    border-radius: 10px;
     transform: scale(3);
   }
 
@@ -123,6 +176,17 @@
     font-size: 40px;
     color: #fff;
     cursor: pointer;
+  }
+  #previewDescription {
+    padding: 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 10px; /* Jarak dari bagian bawah */
+    background: rgba(0, 0, 0, 0.7); /* Background hitam transparan */
+    border-radius: 5px;
+    text-align: center;
+    z-index: 1001;
+    font-size: 16px; /* Ukuran font deskripsi */
   }
 }
 
