--- a/anotherImprove.css
+++ b/anotherImprove.css
@@ -101,7 +101,7 @@
     z-index: 1001;
     font-size: 13px; /* Ukuran font deskripsi */
   }
-  .vdebianLogo {
+  #vdebianLogo {
     width: 80px;
   }
 }
@@ -113,7 +113,7 @@
     margin-top: 2em;
     font-weight: 600;
   }
-  .vdebianLogo {
+  #vdebianLogo {
     width: 200px;
   }
   .previewImage {
