--- a/style.css
+++ b/style.css
@@ -18,6 +18,46 @@
   transform: scale(1.06);
 }
 
+#albumdrop {
+  position: relative;
+  overflow: hidden;
+}
+
+#albumdrop::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./foto/bgforalbumdrop.jfif);
+  background-size: cover;
+  background-position: center;
+  filter: blur(5px) brightness(78%);
+  z-index: -1;
+  transform: scale(1.06);
+}
+
+#bgProject {
+  position: relative;
+  overflow: hidden;
+}
+
+#bgProject::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./foto/bgProject.jfif);
+  background-size: cover;
+  background-position: center;
+  filter: blur(5px) brightness(78%);
+  z-index: -1;
+  transform: scale(1.06);
+}
+
 #VideoNi {
   position: relative;
   overflow: hidden;
